--- a/src/main/resources/application-pro.properties
+++ b/src/main/resources/application-pro.properties
@@ -1,4 +1,3 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/quanglytoanha
+spring.datasource.url=jdbc:mysql://localhost:3306/db1
 spring.datasource.username=root
 spring.datasource.password=123456
- 
