--- a/src/main/resources/application-pro.properties
+++ b/src/main/resources/application-pro.properties
@@ -1,3 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/db1
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://i2cpbxbi4neiupid.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/wntsawymmygs5ova
+spring.datasource.username=jjavf8p127mt2aiy
+spring.datasource.password=kkiczwywu0je5uib
+
+#mysql://jjavf8p127mt2aiy:kkiczwywu0je5uib@i2cpbxbi4neiupid.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/wntsawymmygs5ova
