--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,9 +11,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@5
+      - uses: actions/checkout@v2
       - name: Set up JDK 8
-        uses: actions/setup-java@v5
+        uses: actions/setup-java@v2
         with:
           java-version: '8'
           distribution: 'temurin'
