--- a/.github/workflows/heroku-deploy.yml
+++ b/.github/workflows/heroku-deploy.yml
@@ -17,6 +17,7 @@ jobs:
       uses: actions/setup-java@v2
       with:
         java-version: '1.8'
+        distribution: 'adopt' # or 'zulu', 'temurin', etc.
 
     - name: Build with Maven
       run: mvn clean install
